# minimum_path_finder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  camino_minimo.dot  config.toml  grafo.dot  grafo_antes_de_dijkstra.dot  grafo_despues_de_dijkstra.dot
.github/workflows/: rust.yml
src/: dibujar.rs  dijkstra.rs  grafo.rs  main.rs
wix/: License.rtf  main.wxs
