[package]
name = "projecto_computacional"
version = "0.1.0"
edition = "2024"
authors = ["Enzo OBesso enzocipher@gmail.com"]
license = "MIT"
description = "Projecto en rust para la Universidad Peruana de Ciencias Aplicadas"

[dependencies]
eframe = "0.28"
egui = "0.28"
petgraph = "0.8"
rand = "0.9"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "projecto_computacional"
path = "src/main.rs"
[package.metadata.winres]

